# agent-sandbox-ocp

./: 00-kataconfig.yaml  01-namespaces.yaml  03-currency-httproute.yaml  05-currency-agent.yaml  README.md  README_update.md  STORYBRAND_PLAN.md  mkdocs.yml
.github/workflows/: docs.yml
agents/currency-agent/: Dockerfile  README.md  __init__.py  __main__.py  agent.py  pyproject.toml
agents/currency-agent/currency_agent/: __init__.py  __main__.py  agent.py
agents/currency-mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py  test_server.py
docs/: architecture.md  index.md  kagenti-installation-guide.md  troubleshooting.md
docs/concepts/: agentbuild-source-to-image.md  defense-in-depth.md  google-adk.md  index.md  inner-outer-loop.md  istio-egress.md  kagenti-platform.md  kuadrant-opa.md  osc-explained.md  threat-model.md
docs/guides/: demo-walkthrough.md  developer-guide.md  platform-admin-guide.md
docs/workshop/: index.md
docs/workshop/00-introduction/: index.md
manifests/: 04-authpolicy.yaml  06-service-entry.yaml
manifests/adk-web/: 00-namespace.yaml  01-adk-server.yaml
manifests/currency-demo/: 02-currency-mcp-server.yaml
manifests/currency-kagenti/: README.md
manifests/istio/: ext-authz-config.yaml  service-entry.yaml
manifests/mcp-servers/: fetch-server.yaml
manifests/osc/: kataconfig.yaml  sandboxed-agent.yaml
manifests/policies/: url-blocking-policy.yaml
scripts/: .secrets_template.yaml  demo-complete.sh  deploy-adk-web.sh  install-kagenti.sh  setup-namespaces.sh  test-policy.sh  uninstall-kagenti.sh
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/concepts/: index.html
site/kagenti-installation-guide/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/troubleshooting/: index.html
site/workshop/: index.html
(+123 files in other folders)
