[project]
name = "currency-mcp-server"
version = "0.1.0"
description = "Currency conversion MCP server for the AI Agent Sandbox workshop"
readme = "README.md"
# Lowered to 3.9 for UBI9 compatibility (Kagenti replaces base image)
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]
